--- a/tests/support/config_six_hump_camel.yaml
+++ b/tests/support/config_six_hump_camel.yaml
@@ -8,9 +8,9 @@ codes:
         y:
           min: -2.
           max: 2.
-          start: -0.07
+          start: -0.7
       setup:
-        input_file: support/six_hump_camel.py
+        input_file: six_hump_camel.py
         function: six_hump_camel_func
         execution_type: serial
 options:
