Rollback to normal formatting for YAML scientific notation. Change in https://github.com/radiasoft/pykern/issues/83 closes #19

--- a/tests/support/config_six_hump_camel.yaml
+++ b/tests/support/config_six_hump_camel.yaml
@@ -16,8 +16,8 @@ codes:
 options:
   software: nlopt
   method: LN_BOBYQA
-  software_options: {'xtol_abs': 1.e-6,
-                     'ftol_abs': 1.e-6,
+  software_options: {'xtol_abs': 1e-6,
+                     'ftol_abs': 1e-6,
                      'record_interval': 2}
   exit_criteria:
     sim_max: 30
