Adjusted parameters. Optimization should converge if run long enough now.

--- a/examples/elegant_matching_parallel_execution_example/match_parallel.yml
+++ b/examples/elegant_matching_parallel_execution_example/match_parallel.yml
@@ -19,8 +19,8 @@ codes:
           start: -5.
       setup:
         input_file: elegant.ele
-        execution_type: parallel
-        cores: 4
+        execution_type: serial
+        # cores: 4
 options:
   software: nlopt
   method: LN_SBPLX
