--- a/examples/elegant_matching_parallel_execution_example/match_parallel.yml
+++ b/examples/elegant_matching_parallel_execution_example/match_parallel.yml
@@ -1,5 +1,8 @@
 codes:
   - elegant:
+      settings:
+          # Can be adjusted to
+          bunched_beam.n_particles_per_bunch: 600000
       parameters:
         Q1.K1:
           min: -25.
@@ -19,8 +22,8 @@ codes:
           start: -5.
       setup:
         input_file: elegant.ele
-        execution_type: serial
-        # cores: 4
+        execution_type: parallel
+        cores: 4
 options:
   software: nlopt
   method: LN_SBPLX
