Added pre/post processing functions command to setup

--- a/examples/elegant_matching_parallel_execution_example/match_parallel.yml
+++ b/examples/elegant_matching_parallel_execution_example/match_parallel.yml
@@ -21,6 +21,7 @@ codes:
           max: 25.
           start: -5.
       setup:
+        preprocess: [preprocess.py, f_pre]
         input_file: elegant.ele
         execution_type: parallel
         cores: 4
