--- a/examples/python_aposmm_example/config_six_hump_camel.yaml
+++ b/examples/python_aposmm_example/config_six_hump_camel.yaml
@@ -19,6 +19,7 @@ options:
   max_active_runs: 3
   software: aposmm
   method: nlopt.LN_BOBYQA
+  record_interval: 25
   software_options: {'ftol_abs': 1.0e-4,
                      'dist_to_bound_multiple': 0.5}
   exit_criteria:
