Rearranging examples to be held in package data and put relative symlinks to example directories

--- a/examples/quickstart_example/rsopt_example.yml
+++ b/examples/quickstart_example/rsopt_example.yml
@@ -1,24 +1,1 @@
-codes:
-  - python:
-      parameters:
-        x:
-          min: -3.
-          max: 3.
-          start: 0.08
-        y:
-          min: -2.
-          max: 2.
-          start: -0.7
-      setup:
-        input_file: rsopt_example.py
-        function: six_hump_camel_func
-        execution_type: serial
-options:
-  software: nlopt
-  method: LN_BOBYQA
-  software_options: {'xtol_abs': 1e-6,
-                     'ftol_abs': 1e-6,
-                     'record_interval': 2}
-  exit_criteria:
-    sim_max: 30
-  use_worker_dirs: False
+../../rsopt/package_data/examples/rsopt_example.yml
