--- a/rsopt/package_data/examples/match_parallel.yml
+++ b/rsopt/package_data/examples/match_parallel.yml
@@ -1,34 +1,39 @@
 codes:
   - elegant:
       settings:
-          # Can be adjusted to
-          bunched_beam.n_particles_per_bunch: 600000
+          bunched_beam.n_particles_per_bunch: 16384
       parameters:
         Q1.K1:
-          min: -25.
-          max: 25.
-          start: 5.
+          min: 8.
+          max: 12.
+          start: 10.
         Q2.K1:
-          min: -25.
-          max: 25.
-          start: -5.
+          min: -12.
+          max: -8.
+          start: -10.
         Q3.K1:
-          min: -25.
-          max: 25.
-          start: 5.
+          min: 8.
+          max: 12.
+          start: 10.
         Q4.K1:
-          min: -25.
-          max: 25.
-          start: -5.
+          min: -4.
+          max:  0.
+          start: -2.
       setup:
         preprocess: [preprocess.py, f_pre]
         input_file: elegant.ele
         execution_type: parallel
         cores: 4
 options:
-  software: nlopt
-  method: LN_SBPLX
-  software_options: {'ftol_abs': 1.0e-6}
-  objective_function: [obj_f_bunch_matching.py, obj_f]
+  software: dfols
+  method: dfols
+  components: 4
+  software_options: {'do_logging': False,
+                     'rhoend': 1e-5,
+                     'user_params': {'model.abs_tol': 1e-10,
+                                     'model.rel_tol': 1e-4
+                                    }
+                     }
+  objective_function: [obj_f_bunch_matching.py, obj_f_dfols]
   exit_criteria:
-    sim_max: 30
+    sim_max: 199
