--- a/examples/python_radia_undulator_example/rsopt_scan_width.yml
+++ b/examples/python_radia_undulator_example/rsopt_scan_width.yml
@@ -1,3 +1,4 @@
+% YAML 1.1
 # Top level key is `codes` which should be a list (note the dash in front of `- python`) of codes to be executed to complete an evaluation
 codes:
     - python:
