--- a/examples/user/check_env/config_check_env.yml
+++ b/examples/user/check_env/config_check_env.yml
@@ -1,9 +1,17 @@
 codes:
+  - python:
+      setup:
+        input_file: python_file.py
+        function: main
+        execution_type: serial
+        force_executor: True
+        cores: 1
   - user:
       setup:
         run_command: get_env
         execution_type: serial
-        force_executor: True
+        cores: 5
+#        force_executor: True
         environment_variables:
           MY_NEW_VAR: 4242
           ANOTHER_IS: "hi_there"
