wip initial hookup working - dfols example runs

--- a/examples/python_chwirut_example/config_chwirut.yaml
+++ b/examples/python_chwirut_example/config_chwirut.yaml
@@ -20,14 +20,14 @@ codes:
 options:
   nworkers: 2
   software: dfols
-  method: dfols
-  components: 214
+#  method: dfols
   software_options:
-      dfols_kwargs:
-          do_logging: False
-          rhoend: 1e-5
-          user_params:
-              'model.abs_tol': 1e-10
-              'model.rel_tol': 1e-4
+    components: 214
+    dfols_kwargs:
+      do_logging: False
+      rhoend: 1e-5
+      user_params:
+        'model.abs_tol': 1e-10
+        'model.rel_tol': 1e-4
   exit_criteria:
     sim_max: 400
