Update parameters of zdt4 example for improved result

--- a/examples/problems/zdt4/config_nsga2.yml
+++ b/examples/problems/zdt4/config_nsga2.yml
@@ -1,7 +1,7 @@
 codes:
   - python:
       parameters:
-        x1:
+        x0:
           min: 0
           max: 1
           start: 0
@@ -12,14 +12,15 @@ codes:
           start: 0
       setup:
         input_file: zdt4.py
-        function: obj_zd4
+        function: obj_zdt4
         argument_passing: args
         execution_type: serial
 options:
   software: nsga2
-  nworkers: 5
+  nworkers: 10
   software_options:
-    pop_size: 25
+    pop_size: 100
     n_objectives: 2
+    eta: 1
   exit_criteria:
-    sim_max: 25
+    sim_max: 300
