enabling cuda option for mobo. standardizing how user options are passed into the generator and defaults are set. defaults should come from the pydantic model and not be set at the generator level. everything in the model should be passed into the generator by default.

--- a/examples/mobo_example/config_mobo.yml
+++ b/examples/mobo_example/config_mobo.yml
@@ -17,6 +17,7 @@ options:
   nworkers: 2
   software: mobo
   software_options:
+    use_cuda: False
     num_of_objectives: 2
     min_calc_to_remodel: 3  # if min_calc_to_remodel == nworkers - 1 then model update is synchronous
     constraints:
