Fixing up run strings test to work with pydantic models

--- a/tests/support/config_with_arguments.yml
+++ b/tests/support/config_with_arguments.yml
@@ -24,7 +24,4 @@ codes:
         ignored_files:
           - opal.dist
 options:
-  software: nlopt
-  method: LN_BOBYQA
-  exit_criteria:
-    sim_max: 2
+  software: mesh_scan
