--- a/tests/support/config_ignored_files.yaml
+++ b/tests/support/config_ignored_files.yaml
@@ -16,7 +16,5 @@ codes:
         ignored_files:
           - opal.dist
 options:
-  software: nlopt
-  method: LN_BOBYQA
-  exit_criteria:
-    sim_max: 2
+  software: mesh_scan
+
