Fix #186 migrate to pyproject.toml

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
 MANIFEST.in
-tox.ini
 pytest.ini
-pykern_setup.yaml
+tox.ini
 .python-version
 .#*
 \#*
-
-# libEnsemble generated files / data storage
-*.npy
-*.pickle
-ensemble.log
-libE_stats.txt
+.idea/
+.vscode/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -51,9 +46,12 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .coverage
+.coverage.*
 .cache
 nosetests.xml
 coverage.xml
+*,cover
+.pytest_cache
 
 # Translations
 *.mo
@@ -64,17 +62,7 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
+_build_html/
 
 # PyBuilder
 target/
-/.idea/*
-
-# Simulation files
-*.sdds
-*.semaphore
-*.out
-*.anb
-*.err
-*.dfl
-auth.db
-machinefile_autogen*
